--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,5 +3,9 @@
 <% end %>
 
 <script type="text/javascript" charset="utf-8">
-
+  $(function () {
+    $(".js-more").on('click', function() {
+      let id = $(this).data("id")
+    })
+  })
 </script>
